--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
+    "sails-postgresql": "~0.10.14",
+    "sails-redis": "~0.10.3",
     "rc": "~0.5.0",
     "include-all": "~0.1.3",
     "ejs": "~0.8.4",
